# ChromaHackerWeb

./: README.md  pyproject.toml  wezterm_colors.json
chromahackerweb/: __main__.py  wezterm_import.py
chromahackerweb/static/: script.js  style.css
chromahackerweb/templates/: index.html
