[tool.poetry]
name = "chromahackerweb"
version = "0.1.3"
description = ""
authors = ["FaunuX <judahpspiegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
chromahacker = "^0.2.5"

[tool.poetry.scripts]
chromahackerweb = "chromahackerweb.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
