[tool.poetry]
name = "chromahackerweb"
version = "0.2.0"
description = ""
authors = ["FaunuX <judahpspiegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
chromahacker = "^0.3.0"

[tool.poetry.scripts]
chromahackerweb = "chromahackerweb.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
